workspace/.metadata/.plugins/org.eclipse.cdt.ui/osek.build.log
14:50:57 **** Incremental Build of configuration Debug for project osek ****
make all 
Building file: ../src/blinking.c
Invoking: MCU C Compiler
arm-none-eabi-gcc -D__REDLIB__ -DCPU=lpc4337 -DDEBUG -D__CODE_RED -DCORE_M4 -D__USE_CMSIS=CMSIS_LPC43xx_DriverLib -D__LPC43XX__ -D__MULTICORE_NONE -I"/home/pablo/Dropbox/Privado/Electrónica/NXP/LPC43xx/workspace/LPC4330_Xplorer_UsbVcomLib/inc" -I"/home/pablo/Documents/CIAA-Repositories/EOPT/workspace/CMSIS_LPC43xx_DriverLib/inc" -O0 -g3 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -fsingle-precision-constant -mcpu=cortex-m4 -mfpu=fpv4-sp-d16 -mfloat-abi=softfp -mthumb -specs=redlib.specs -MMD -MP -MF"src/blinking.d" -MT"src/blinking.d" -o "src/blinking.o" "../src/blinking.c"
In file included from ../src/Types.h:67:0,
                 from ../src/os.h:76,
                 from ../src/blinking.c:61:
/home/pablo/Documents/CIAA-Repositories/EOPT/workspace/CMSIS_LPC43xx_DriverLib/inc/lpc_types.h:204:0: warning: "INLINE" redefined [enabled by default]
 #define INLINE inline
 ^
In file included from ../src/Types.h:66:0,
                 from ../src/os.h:76,
                 from ../src/blinking.c:61:
../src/Compiler.h:94:0: note: this is the location of the previous definition
 #define INLINE
 ^
In file included from ../src/os.h:76:0,
                 from ../src/blinking.c:61:
../src/Types.h:105:0: warning: "INLINE" redefined [enabled by default]
 #define INLINE
 ^
In file included from ../src/Types.h:67:0,
                 from ../src/os.h:76,
                 from ../src/blinking.c:61:
/home/pablo/Documents/CIAA-Repositories/EOPT/workspace/CMSIS_LPC43xx_DriverLib/inc/lpc_types.h:204:0: note: this is the location of the previous definition
 #define INLINE inline
 ^
In file included from ../src/Types.h:127:0,
                 from ../src/os.h:76,
                 from ../src/blinking.c:61:
../src/Types_Arch.h:72:2: error: #error NULL defined before
 #error NULL defined before
  ^
In file included from ../src/os.h:76:0,
                 from ../src/blinking.c:61:
../src/Types.h:133:0: warning: "NULL" redefined [enabled by default]
 #define NULL ((void *)0)
 ^
In file included from ../src/Types.h:67:0,
                 from ../src/os.h:76,
                 from ../src/blinking.c:61:
/home/pablo/Documents/CIAA-Repositories/EOPT/workspace/CMSIS_LPC43xx_DriverLib/inc/lpc_types.h:137:0: note: this is the location of the previous definition
 #define NULL ((void*) 0)
 ^
In file included from ../src/os.h:76:0,
                 from ../src/blinking.c:61:
../src/Types.h:72:16: error: expected identifier or '(' before numeric constant
 #define ENABLE 1
                ^
/home/pablo/Documents/CIAA-Repositories/EOPT/workspace/CMSIS_LPC43xx_DriverLib/inc/LPC43xx.h:850:18: note: in expansion of macro 'ENABLE'
   __I  uint32_t  ENABLE;                    /*!< (@ 0x40040FE4) Enable register        */
                  ^
../src/Types.h:72:16: error: expected identifier or '(' before numeric constant
 #define ENABLE 1
                ^
/home/pablo/Documents/CIAA-Repositories/EOPT/workspace/CMSIS_LPC43xx_DriverLib/inc/LPC43xx.h:931:18: note: in expansion of macro 'ENABLE'
   __I  uint32_t  ENABLE;                    /*!< (@ 0x40044FE4) Event Enable register  */
                  ^
make: *** [src/blinking.o] Error 1

14:50:57 Build Finished (took 215ms)

